tests/reference/asr-private2-d3a4771.stderr
semantic error: Private variable `y` cannot be imported
 --> tests/errors/private2.f90:7:5
  |
7 |     use foo2, only: y
  |     ^^^^^^^^^^^^^^^^^ 
